# psar

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  barplot.py  plot.py  plot_time.py  score.py  test.cpp  test.h  test2.cpp  time.py  yeti-4-mlc.txt
results/yeti/: test2_result.js  test2_result.json  test_result.js  test_result.json
src/: psar_common.cpp  psar_common.h  rng.h  test1.cpp  test2.cpp  test_distant_reads_distant_buffer.cpp  test_distant_reads_distant_buffer_forced.cpp  test_distant_reads_local_buffer.cpp  test_get_time.cpp  test_get_time_all_scenarios.cpp  test_get_time_all_scenarios_bound.cpp  test_get_time_all_scenarios_bound_forced.cpp  test_get_time_all_scenarios_forced.cpp
